# InvScrv2

./: .replit  EXPORT_FILE_LIST.txt  EXPORT_INSTRUCTIONS.md  Home.py  README.md  app.py  example_investment_data.csv  pyproject.toml  replit.md
.streamlit/: config.toml  secrets.toml
attached_assets/: Risk profile 2025_1752641731536.docx  download-2.csv
pages/: 0_Upload_File.py  1_Data_Import.py  2_Assumptions.py  2_Data_Analysis.py  2_Direct_Load.py  3_HUB24_Filter.py  4_Formula_Filtering.py  4_HUB24_Filter.py  5_Data_Analysis.py  6_Recommended_Portfolio.py  7_Assumptions.py  7_Direct_Load.py
sample_data/: example_format.csv  investment_data_sample.csv
utils/: data_processor.py  data_storage.py  formula_engine.py  hub24_filter.py  visualization.py
