[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pickledb>=1.3.2",
    "plotly>=6.1.0",
    "pypdf2>=3.0.1",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
]
